--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ $(function () {
       <h2>Settore Procedure meccanizzate</h2>              
     </div>
     <p class="clearboth">Meccanizzazione procedure</p>  
+    <p >Responsabile: M. Foschini</p>
     Addetti
     <ul>
         <li>R. Catalano</li>
